<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="338dp"
        android:layout_height="228dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="336dp"
            android:layout_height="253dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mobile_home" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="152dp"
        android:layout_height="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_corner"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/total_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/number_note"
            android:textColor="@color/brown"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heebo_bold"
            android:gravity="center"
            android:text="@string/total_catatan"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="152dp"
        android:layout_height="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_corner"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/total_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/number_note"
            android:textColor="@color/brown"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heebo_bold"
            android:gravity="center"
            android:text="@string/total_best"
            android:textColor="@color/grey"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/halo_apakabar"
        android:textColor="@color/brown"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="326dp"
        android:layout_height="72dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/brown_corner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/heebo_bold"
            android:text="@string/recent"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/andika"
            android:text="@string/quote_oftheyear"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/create_button"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="17dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_create_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>